--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
       <nav class="nav-links">
         <a class="active" href="index.html">Home</a>
-        <a href="WellZen/blog/">Blog</a>
-        <a href="WellZen/resources.html">Resources</a>
+        <a href="blog/">Blog</a>
+        <a href="resources.html">Resources</a>
         <div class="nav-more">
           <button class="link more-toggle" aria-expanded="false">More ▾</button>
           <div class="more-menu">
