--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <p class="eyebrow">Nutrition · 5 min read</p>
             <h3>Balanced diet for growing bodies</h3>
             <p class="muted">Learn essential nutritional strategies to support physical and mental development.</p>
-            <a class="link" href="blog/">Read more →</a>
+            <a class="link" href="blog/eat-better.html">Read more →</a>
           </div>
         </article>
 
@@ -137,7 +137,7 @@
             <p class="eyebrow">Stress · 6 min read</p>
             <h3>Short, focused techniques to reset stress</h3>
             <p class="muted">Breathing, movement, and attention shifts grounded in research.</p>
-            <a class="link" href="blog/">Read more →</a>
+            <a class="link" href="blog/stress-reset.html">Read more →</a>
           </div>
         </article>
 
