--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
     </nav>
 
     <div class="nav-cta">
-      <a class="btn btn-ghost" href="newsletter.html">Sign Up</a>
-      <a class="btn" href="resources.html">Learn</a>
+      <a class="btn btn-ghost" href="sign-up.html">Sign Up</a>
+      <a class="btn" href="blog/index.html">Learn</a>
     </div>
   </div>
 </header>
@@ -52,15 +52,14 @@
     <div>
       <h2 class="h2">Why I started TeenWell</h2>
       <p>
-        As a high school student passionate about healthcare and technology, I realized many teens 
-        struggle to access reliable, science-based wellness information in a format made for them.
+        As a high school student passionate about healthcare and technology, as well as being co-president of a club that focuses on teaching concepts which regular classes may skip over, I decided to create this website focused on science-based wellness information in a format made for education.
       </p>
       <p>
         TeenWell combines medical research, digital education, and student perspective to help young people 
-        build healthier habits and stronger futures — academically, mentally, and physically.
+        build healthier habits and stronger futures. Focused in all perspectives: academically, mentally, and physically.
       </p>
       <p>
-        My mission is to make credible health knowledge accessible, actionable, and inspiring for every student.
+        My mission is to make credible health knowledge free, accessible, actionable, and inspiring.
       </p>
     </div>
 
@@ -133,7 +132,7 @@
   <div class="container narrow">
     <h2 class="h2">Join our wellness movement</h2>
     <p>Follow along as we publish articles, tools, and student health resources.</p>
-    <a class="btn" href="newsletter.html">Stay Updated</a>
+    <a class="btn" href="sign-up.html">Stay Updated</a>
   </div>
 </section>
 
@@ -143,7 +142,7 @@
   <div class="container footer-grid">
     <div>
       <a class="logo" href="index.html">TeenWell</a>
-      <p class="muted small">© 2024 TeenWell — Educational content only, not medical advice.</p>
+      <p class="muted small">© 2025 TeenWell — Educational content only, not medical advice.</p>
     </div>
 
     <div class="footer-col">
