--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </nav>
 
       <div class="nav-cta">
-        <a class="btn btn-ghost" href="contact.html">Sign up</a>
-        <a class="btn" href="resources.html">Learn</a>
+        <a class="btn btn-ghost" href="sign-up.html">Sign up</a>
+        <a class="btn" href="blog/.html">Learn</a>
       </div>
     </div>
   </header>
@@ -43,7 +43,7 @@
           <p>Science-backed health insights designed for students. Learn practical strategies to improve your physical and mental well-being.</p>
           <div class="hero-actions">
             <a class="btn" href="blog/">Explore</a>
-            <a class="btn btn-ghost" href="resources.html">Learn more</a>
+            <a class="btn btn-ghost" href="about.html">Learn more</a>
             </div>
           </div>
 
@@ -192,7 +192,7 @@
       <div class="container cta-inner">
         <h2 class="h2">Join the health revolution</h2>
         <p>Free, evidence-based resources for students and schools.</p>
-        <a class="btn" href="contact.html">Get started</a>
+        <a class="btn" href="resources.html">Get started</a>
       </div>
     </section>
 
