--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
     </nav>
 
     <div class="nav-cta">
-      <a class="btn btn-ghost" href="newsletter.html">Sign Up</a>
-      <a class="btn" href="resources.html">Learn</a>
+      <a class="btn btn-ghost" href="sign-up.html">Sign Up</a>
+      <a class="btn" href="blog/index.html">Learn</a>
     </div>
   </div>
 </header>
@@ -69,7 +69,7 @@
   <div class="container footer-grid">
     <div>
       <a class="logo" href="index.html">TeenWell</a>
-      <p class="muted small">© 2024 TeenWell — Educational content only.</p>
+      <p class="muted small">© 2025 TeenWell — Educational content only.</p>
     </div>
   </div>
 </footer>
