--- a/resources.html
+++ b/resources.html
@@ -25,8 +25,8 @@
     </nav>
 
     <div class="nav-cta">
-      <a class="btn btn-ghost" href="newsletter.html">Sign Up</a>
-      <a class="btn" href="resources.html">Learn</a>
+      <a class="btn btn-ghost" href="sign-up.html">Sign Up</a>
+      <a class="btn" href="blog/index.html">Learn</a>
     </div>
   </div>
 </header>
@@ -157,7 +157,7 @@
   <div class="container footer-grid">
     <div>
       <a class="logo" href="index.html">TeenWell</a>
-      <p class="muted small">© 2024 TeenWell — Educational content only, not medical advice.</p>
+      <p class="muted small">© 2025 TeenWell — Educational content only, not medical advice.</p>
     </div>
 
     <div class="footer-col">
