--- a/roadmap.html
+++ b/roadmap.html
@@ -23,8 +23,8 @@
     </nav>
 
     <div class="nav-cta">
-      <a class="btn btn-ghost" href="newsletter.html">Sign Up</a>
-      <a class="btn" href="resources.html">Learn</a>
+      <a class="btn btn-ghost" href="sign-up.html">Sign Up</a>
+      <a class="btn" href="blog/index.html">Learn</a>
     </div>
   </div>
 </header>
@@ -92,7 +92,7 @@
   <div class="container narrow">
     <h2 class="h2">Follow the journey</h2>
     <p class="lead">See updates as the project grows and impacts more students.</p>
-    <a class="btn" href="newsletter.html">Stay Updated</a>
+    <a class="btn" href="sign-up.html">Stay Updated</a>
   </div>
 </section>
 
@@ -100,7 +100,7 @@
   <div class="container footer-grid">
     <div>
       <a class="logo" href="index.html">TeenWell</a>
-      <p class="muted small">© 2024 TeenWell — Educational content only.</p>
+      <p class="muted small">© 2025 TeenWell — Educational content only.</p>
     </div>
   </div>
 </footer>
