--- a/s.html
+++ b/s.html
@@ -27,7 +27,15 @@
         </div>
       </nav>
 
-      <div class="nav-cta">
+    <div class="nav-cta">
+  <!-- Visible when logged OUT -->
+  <a class="btn btn-ghost" href="sign-up.html" data-auth="out">Sign up</a>
+  <a class="btn" href="blog/index.html" data-auth="out">Learn</a>
+
+  <!-- Visible when logged IN -->
+  <a class="btn btn-ghost" href="dashboard.html" data-auth="in">My Dashboard</a>
+  <button id="logoutBtn" class="btn" data-auth="in">Log out</button>
+</div>
         <a class="btn btn-ghost" href="contact.html">Contact</a>
         <a class="btn" href="sign-up.html">Sign up</a>
       </div>
