--- a/sign-up.html
+++ b/sign-up.html
@@ -18,9 +18,15 @@
         <a href="about.html">About</a>
         <a href="login.html">Log in</a>
       </nav>
-      <div class="nav-cta">
-        <a class="btn-ghost" href="dashboard.html">Dashboard</a>
-      </div>
+<div class="nav-cta">
+  <!-- Visible when logged OUT -->
+  <a class="btn btn-ghost" href="sign-up.html" data-auth="out">Sign up</a>
+  <a class="btn" href="blog/index.html" data-auth="out">Learn</a>
+
+  <!-- Visible when logged IN -->
+  <a class="btn btn-ghost" href="dashboard.html" data-auth="in">My Dashboard</a>
+  <button id="logoutBtn" class="btn" data-auth="in">Log out</button>
+</div>
     </div>
   </header>
 
