--- a/resources.html
+++ b/resources.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resources | TeenWell</title>
-
   <link rel="stylesheet" href="style.css">
+  <style>
+    .guest [data-auth="in"] { display: none !important; }
+    .auth  [data-auth="out"] { display: none !important; }
+  </style>
 </head>
-
-<body>
+<body class="guest">
 
 <!-- ===== HEADER / NAV ===== -->
 <header class="site-header">
@@ -23,19 +25,18 @@
       <a href="roadmap.html">Roadmap</a>
       <a href="contact.html">Contact</a>
     </nav>
-<div class="nav-cta">
-  <!-- Visible when logged OUT -->
-  <a class="btn btn-ghost" href="sign-up.html" data-auth="out">Sign up</a>
-  <a class="btn" href="blog/index.html" data-auth="out">Learn</a>
 
-  <!-- Visible when logged IN -->
-  <a class="btn btn-ghost" href="dashboard.html" data-auth="in">My Dashboard</a>
-  <button id="logoutBtn" class="btn" data-auth="in">Log out</button>
-</div>
+    <div class="nav-cta">
+      <!-- Visible when logged OUT -->
+      <a class="btn btn-ghost" href="sign-up.html" data-auth="out">Sign up</a>
+      <a class="btn" href="blog/index.html" data-auth="out">Learn</a>
+
+      <!-- Visible when logged IN -->
+      <a class="btn btn-ghost" href="dashboard.html" data-auth="in">My Dashboard</a>
+      <button id="logoutBtn" class="btn" data-auth="in">Log out</button>
     </div>
   </div>
 </header>
-
 
 <!-- ===== HERO ===== -->
 <section class="section hero centered">
@@ -48,7 +49,6 @@
     </p>
   </div>
 </section>
-
 
 <!-- ===== RESOURCE GRID ===== -->
 <section class="section">
@@ -77,7 +77,6 @@
   </div>
 </section>
 
-
 <!-- ===== HOSPITAL SOURCES ===== -->
 <section class="section light">
   <div class="container centered">
@@ -105,7 +104,6 @@
   </div>
 </section>
 
-
 <!-- ===== DOWNLOAD OR STUDY KIT ===== -->
 <section class="section">
   <div class="container centered">
@@ -114,7 +112,6 @@
     <a class="btn btn-ghost" href="#">PDF Coming Soon</a>
   </div>
 </section>
-
 
 <!-- ===== HOW TO FACT CHECK HEALTH INFO ===== -->
 <section class="section">
@@ -128,24 +125,20 @@
       <h3 class="h3">Check the source</h3>
       <p>Prefer government, medical institutions, and peer-reviewed science.</p>
     </div>
-
     <div class="card">
       <h3 class="h3">Beware social media myths</h3>
       <p>Health advice online can be misleading — always double-check.</p>
     </div>
-
     <div class="card">
       <h3 class="h3">Look for citations</h3>
       <p>Credible info links to research, not opinions or trends.</p>
     </div>
-
     <div class="card">
       <h3 class="h3">Consult professionals</h3>
       <p>Talk to healthcare providers for medical advice and decisions.</p>
     </div>
   </div>
 </section>
-
 
 <!-- ===== CTA ===== -->
 <section class="section cta centered">
@@ -155,7 +148,6 @@
     <a class="btn" href="newsletter.html">Join the newsletter</a>
   </div>
 </section>
-
 
 <!-- ===== FOOTER ===== -->
 <footer class="site-footer">
@@ -183,6 +175,6 @@
 </footer>
 
 <script src="script.js"></script>
-
+<script type="module" src="auth-ui.js"></script>
 </body>
 </html>
